Improve table/stream query construct completion support